--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_palido"
     tools:context=".Login">
 
     <TextView
         android:id="@+id/sesion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
         android:gravity="center"
+        android:onClick="recuperar"
         android:text="@string/iniciar_sesion"
-        android:textSize="30dp"
+        android:textColor="@color/color_primary"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
@@ -21,8 +25,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sesion"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:text="Correo"
+        android:textColor="@color/color_primary"
         android:textSize="20dp" />
 
     <EditText
@@ -32,8 +38,8 @@
         android:layout_below="@+id/correo_texto"
         android:layout_marginHorizontal="50dp"
         android:layout_marginLeft="50dp"
-
-        />
+        android:drawableStart="@drawable/icon_email"
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/contraseña_texto"
@@ -41,7 +47,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/correo"
         android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/contrase_a"
+        android:textColor="@color/color_primary"
         android:textSize="20dp" />
 
     <EditText
@@ -50,38 +59,53 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/contraseña_texto"
         android:layout_marginHorizontal="50dp"
-        />
+        app:cornerRadius="50dp"
+        android:drawableStart="@drawable/icon_contra"
+
+        android:importantForAutofill="no"
+        android:inputType="textPassword" />
 
     <TextView
         android:id="@+id/olvidar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/olvidaste_tu_contrase_a"
         android:layout_below="@+id/contraseña"
         android:layout_alignParentRight="true"
-        android:gravity="right"
         android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="10dp"
+        android:gravity="right"
+        android:text="@string/olvidaste_tu_contrase_a"
+        android:textColor="@color/color_primary"
 
         />
+
     <Button
         android:id="@+id/entrar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Entrar"
         android:layout_below="@+id/olvidar"
-        android:gravity="center"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/color_primary"
+        android:gravity="center"
         android:onClick="iniciar"
+        app:cornerRadius="30dp"
+        android:text="Entrar"
+
         />
 
     <TextView
         android:id="@+id/crear_cuenta"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Crear Cuenta"
         android:layout_below="@+id/entrar"
+        android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="50dp"
-        android:gravity="center"/>
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:onClick="crearCuenta"
+        android:text="Crear Cuenta"
+        android:textColor="@color/color_primary" />
 
 
 </RelativeLayout>
