--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_primary">#366FFB</color>
+    <color name="color_negro">#070707</color>
+    <color name="color_palido">#DEDFE1</color>
+    <color name="colorAccent">#FB7C4F</color>
 </resources>
