--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,67 +13,105 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:gravity="center"
-        android:onClick="recuperar"
+
         android:text="@string/iniciar_sesion"
         android:textColor="@color/color_primary"
         android:textSize="30sp"
         android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/imagen"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription="bueno"
+        android:scaleType="fitXY"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/icon_persona"
+        android:layout_below="@+id/sesion" />
+        <!--android:layout_marginTop="?attr/actionBarSize"
+        -->
+
+         />
 
     <TextView
         android:id="@+id/correo_texto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sesion"
+        android:layout_below="@+id/imagen"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+
         android:text="Correo"
         android:textColor="@color/color_primary"
         android:textSize="20dp" />
 
-    <EditText
-        android:id="@+id/correo"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/cajacorreo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/correo_texto"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginLeft="50dp"
-        android:drawableStart="@drawable/icon_email"
-        android:inputType="textEmailAddress" />
+        android:layout_marginTop="10dp"
+        android:background="#FFFFFF"
+        app:startIconDrawable="@drawable/icon_email">
+
+
+        <EditText
+            android:id="@+id/correo"
+            android:layout_width="match_parent"
+            android:hint="aleatorio@gmail.com"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/correo_texto"
+            android:drawableStart="@drawable/icon_email"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/contraseña_texto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/correo"
+        android:layout_below="@+id/cajacorreo"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+
         android:text="@string/contrase_a"
         android:textColor="@color/color_primary"
         android:textSize="20dp" />
 
-    <EditText
-        android:id="@+id/contraseña"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/cajacontaseña"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/contraseña_texto"
         android:layout_marginHorizontal="50dp"
-        app:cornerRadius="50dp"
-        android:drawableStart="@drawable/icon_contra"
+        android:layout_marginTop="10dp"
+        android:background="#FFFFFF"
+        app:passwordToggleEnabled="true"
 
-        android:importantForAutofill="no"
-        android:inputType="textPassword" />
+        app:startIconDrawable="@drawable/icon_contra">
+
+        <EditText
+            android:id="@+id/contraseña"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="escriba aqui"
+
+            android:autofillHints=""
+            android:drawableStart="@drawable/icon_contra"
+            android:inputType="textPassword"
+            app:cornerRadius="50dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <TextView
         android:id="@+id/olvidar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/contraseña"
+        android:layout_below="@+id/cajacontaseña"
         android:layout_alignParentRight="true"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
         android:gravity="right"
+        android:onClick="recuperar"
         android:text="@string/olvidaste_tu_contrase_a"
         android:textColor="@color/color_primary"
 
@@ -89,8 +127,8 @@
         android:backgroundTint="@color/color_primary"
         android:gravity="center"
         android:onClick="iniciar"
-        app:cornerRadius="30dp"
         android:text="Entrar"
+        app:cornerRadius="30dp"
 
         />
 
