--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -6,44 +6,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".CrearCuenta">
+
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Crear Cuenta"/>
+        android:text="Crear Cuenta" />
+
     <TextView
         android:id="@+id/txt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre de cliente"
         android:layout_marginLeft="50dp"
-        />
+        android:text="Nombre de cliente" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
-        app:startIconDrawable="@drawable/icon_email">
+        app:startIconDrawable="@drawable/icon_persona">
 
         <EditText
             android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autofillHints=""
             android:background="@android:color/white"
             android:ems="10"
             android:hint=""
             android:inputType="text"
-            android:textColor="@android:color/black"
-            android:autofillHints="" />
+            android:textColor="@android:color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/txt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correo"
-        android:layout_marginLeft="50dp"/>
+        android:layout_marginLeft="50dp"
+        android:text="Correo" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,18 +64,21 @@
             android:inputType="textEmailAddress"
             android:textColor="@android:color/black" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <TextView
         android:id="@+id/txt4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contraseña"
-        android:layout_marginLeft="50dp"/>
+        android:layout_marginLeft="50dp"
+        android:text="Contraseña" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
-        app:startIconDrawable="@drawable/icon_email">
+        app:passwordToggleEnabled="true"
+        app:startIconDrawable="@drawable/icon_contra">
 
         <EditText
             android:id="@+id/contraseña"
@@ -84,18 +90,21 @@
             android:inputType="textPassword"
             android:textColor="@android:color/black" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <TextView
         android:id="@+id/txt5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Repetir Contraseña"
-        android:layout_marginLeft="50dp"/>
+        android:layout_marginLeft="50dp"
+        android:text="Repetir Contraseña" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
-        app:startIconDrawable="@drawable/icon_email">
+        app:passwordToggleEnabled="true"
+        app:startIconDrawable="@drawable/icon_contra">
 
         <EditText
             android:id="@+id/repetir"
@@ -107,41 +116,58 @@
             android:inputType="textPassword"
             android:textColor="@android:color/black" />
     </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-        android:id="@+id/txt6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pais"
-        android:layout_marginLeft="50dp"/>
-    <Spinner
-        android:id="@+id/spiner1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
 
-    <TextView
-        android:id="@+id/txt7"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ciudad"
-        android:layout_marginLeft="50dp"/>
-    <Spinner
-        android:id="@+id/spiner2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="Pais" />
+
+        <TextView
+            android:id="@+id/txt7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250dp"
+            android:text="Ciudad" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
+
     <Button
         android:id="@+id/entrar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-       android:layout_gravity="center"
+        android:layout_gravity="center"
 
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/color_primary"
         android:gravity="center"
         android:onClick="crear"
-        app:cornerRadius="30dp"
         android:text="Entrar"
+        app:cornerRadius="30dp"
 
         />
 
