--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:gravity="center"
-
+        android:fontFamily="@font/constan"
         android:text="@string/iniciar_sesion"
         android:textColor="@color/color_primary"
         android:textSize="30sp"
