--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -9,14 +9,14 @@
     <RelativeLayout
         android:id="@+id/relative1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp">
 
 
         <ImageView
             android:id="@+id/imagen"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@drawable/ic_nopath___copia__3_"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,11 +40,14 @@
             android:text="VER EN 3D" />
 
         <ImageButton
+            android:id="@+id/carrito"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_below="@+id/calificacion"
             android:layout_alignParentRight="true"
+            android:backgroundTint="@color/darker_gray"
+
             android:onClick="agregarACarrito"
             android:src="@drawable/icon_carrito_agregar"
 
@@ -56,6 +59,7 @@
         android:id="@+id/relative2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
         android:layout_below="@+id/relative1">
 
 
@@ -65,6 +69,12 @@
             android:layout_height="wrap_content"
 
             android:text="nombre" />
+        <TextView
+            android:id="@+id/cantidad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nombre"
+            android:text="Stock: " />
 
         <TextView
             android:id="@+id/precio"
@@ -78,6 +88,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/precio"
+            android:textStyle="italic"
+
+            android:textColor="@color/colorPrimaryRed"
             android:layout_alignParentRight="true"
             android:text="descuento"
 
@@ -88,7 +101,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/descuento"
-            android:text="aqui nueva empresaa" />
+            android:text="aqui nueva empresaa"
+            app:chipBackgroundColor="@color/colorPrimary" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/marca"
@@ -96,15 +110,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/descuento"
             android:layout_marginTop="0dp"
-
             android:layout_toEndOf="@+id/empresa"
-            android:text="aqui gra empresa" />
+            android:text="aqui gra empresa"
+            app:chipBackgroundColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/marca"
+            android:layout_below="@+id/empresa"
             android:layout_alignParentRight="true"
             android:text="descuento etc
 etddf \n etdfaff"
@@ -116,14 +130,25 @@ etddf \n etdfaff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/descripcion"
+            android:textColor="@color/colorPrimaryGreen"
+            android:drawableLeft="@drawable/icon_garantia"
             android:text="1 año de garantia" />
+
+        <TextView
+            android:id="@+id/similares"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/garantia"
+            android:text="Similares" />
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler2"
+            android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/garantia" />
+            android:layout_below="@+id/similares"
+
+            tools:listitem="@layout/item_producto_imagen" />
 
     </RelativeLayout>
 
