--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<FrameLayout
+    android:id="@+id/ima"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="2dp"
+    android:background="@drawable/border_producto">
+
+
     <ImageView
         android:id="@+id/imagen"
         android:layout_width="150dp"
         android:layout_height="150dp"
+
+
         />
+</FrameLayout>
+
+
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/imagen"
+        android:layout_toRightOf="@+id/ima"
         android:layout_marginLeft="10dp"
+        android:paddingRight="20dp"
         android:orientation="vertical"
         >
        <TextView
@@ -44,12 +60,6 @@
             android:layout_marginTop="10dp"
             />
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.02dp"
-        android:layout_below="@id/imagen"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/darker_gray"
-        />
+
 
 </RelativeLayout>
