--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_primary">#366FFB</color>
     <color name="colorPrimary">#366FFB</color>
+    <color name="colorPrimaryRed">#FF0000</color>
+    <color name="colorPrimaryGreen">#10EC00</color>
     <color name="colorprimario">#366FFB</color>
     <color name="darkerBlack">#366FFB</color>
+    <color name="darker_gray">#aaa</color>
     <color name="color_negro">#070707</color>
     <color name="color_palido">#DEDFE1</color>
     <color name="colorAccent">#FB7C4F</color>
