--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -13,12 +13,13 @@
 
         />
     <Button
-        android:id="@+id/boton"
+        android:id="@+id/comprar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recycler"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:backgroundTint="@color/color_primary"
         android:gravity="center"
         android:text="Comprar"
