--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -13,7 +13,7 @@
 
         />
     <Button
-        android:id="@+id/boton"
+        android:id="@+id/comprar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recycler"
