--- a/app/src/main/res/drawable/menu_selector.xml
+++ b/app/src/main/res/drawable/menu_selector.xml
@@ -4,6 +4,6 @@
      android:color="@color/colorPrimary"
     />
     <item android:state_selected="false"
-        android:color="@android:color/black"
+        android:color="@android:color/darker_gray"
         />
 </selector>
