--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/paleta_5"
     tools:context=".MainActivity">
 
 
@@ -23,7 +24,6 @@
         app:itemIconTint="@drawable/menu_selector"
         app:itemTextColor="@drawable/menu_selector"
         app:itemIconSize="30sp"
-        android:background="@android:color/darker_gray"
         />
 
 </RelativeLayout>
