--- a/app/src/main/res/layout/fragment_busqueda.xml
+++ b/app/src/main/res/layout/fragment_busqueda.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/paleta_5"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
@@ -11,17 +12,17 @@
         android:layout_margin="3dp"
         android:background="@drawable/border_redondeado"
         android:gravity="center"
-        android:padding="10dp"
-
+        android:padding="4dp"
         >
 
         <SearchView
             android:id="@+id/search"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:iconifiedByDefault="false"
             android:layout_alignParentLeft="true"
+            android:background="@color/white"
             android:queryHint="hola mundo"
 
             />
