--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -15,7 +15,8 @@
         android:id="@+id/relative1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5dp">
+        android:layout_marginHorizontal="5dp"
+        >
 
 
         <ImageView
@@ -24,7 +25,8 @@
             android:layout_height="200dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="#74E9ECEF"/>
 
         <RatingBar
             android:id="@+id/calificacion"
@@ -33,6 +35,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imagen"
             android:layout_centerHorizontal="true"
+            android:progressTint="@color/paleta_3"
+            android:secondaryProgressTint="@color/paleta_3"
+            android:rating="3"
             android:numStars="5" />
 
         <Button
@@ -41,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/calificacion"
             android:layout_centerHorizontal="true"
+            app:cornerRadius="15dp"
             android:onClick="verEn3D"
             android:text="VER EN 3D" />
 
@@ -51,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/calificacion"
             android:layout_alignParentRight="true"
-            android:backgroundTint="@color/darker_gray"
+            android:backgroundTint="@color/paleta_7"
 
             android:onClick="agregarACarrito"
             android:src="@drawable/icon_carrito_agregar"
@@ -73,13 +79,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textAllCaps="true"
             android:text="nombre" />
         <TextView
             android:id="@+id/cantidad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nombre"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:text="Stock: " />
 
         <TextView
@@ -109,9 +117,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/cantidad"
             android:textSize="20sp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimary"
             android:text="aqui nueva empresaa"
-            app:chipBackgroundColor="@color/colorPrimary" />
+            android:textStyle="bold"
+            app:chipBackgroundColor="@color/paleta_1" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/marca"
@@ -120,17 +129,18 @@
             android:layout_below="@+id/cantidad"
             android:layout_marginTop="0dp"
             android:layout_toEndOf="@+id/empresa"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:text="aqui gra empresa"
-            app:chipBackgroundColor="@color/colorPrimary" />
+            android:textStyle="bold"
+            app:chipBackgroundColor="@color/paleta_1" />
 
         <TextView
             android:id="@+id/descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/empresa"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:layout_alignParentRight="true"
             android:text="descuento etc
 etddf \n etdfaff"
@@ -143,7 +153,7 @@ etddf \n etdfaff"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_below="@+id/descripcion"
-            android:textColor="@color/colorPrimaryGreen"
+            android:textColor="#1E9722"
             android:drawableLeft="@drawable/icon_garantia"
             android:text="1 año de garantia" />
 
@@ -152,7 +162,8 @@ etddf \n etdfaff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/garantia"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            android:textColor="@color/colorPrimary"
             android:text="Similares" />
 
 
@@ -161,7 +172,6 @@ etddf \n etdfaff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/similares"
-
             tools:listitem="@layout/item_producto_imagen" />
 
     </RelativeLayout>
