--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -45,6 +45,7 @@
             android:hint="@string/aleatorio_gmail_com"
             android:layout_height="wrap_content"
             android:layout_below="@+id/correo_texto"
+            android:background="@color/white"
             android:drawableStart="@drawable/icon_email"
             android:inputType="textEmailAddress"
             android:autofillHints="" />
