--- a/app/src/main/res/layout/fragment_tienda.xml
+++ b/app/src/main/res/layout/fragment_tienda.xml
@@ -38,13 +38,23 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/paleta_5"
-                    android:layout_gravity="center">
+                    android:background="#74E9ECEF"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="10dp">
 
-
+                    <TextView
+                        android:id="@+id/nombre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="sofa premiun"
+                        android:textStyle="bold"
+                        android:textAllCaps="true"
+                        android:textColor="@color/colorPrimary"/>
                     <ImageView
                         android:id="@+id/imagen"
                         android:layout_width="250dp"
@@ -53,29 +63,22 @@
                         android:src="@drawable/sofa" />
 
 
-                    <TextView
-                        android:id="@+id/nombre"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
-                        android:text="sofa premiun" />
+
 
                     <TextView
                         android:id="@+id/marca"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/nombre"
-                        android:layout_centerHorizontal="true"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/paleta_7"
+                        android:visibility="gone"
                         android:text="premium" />
 
                     <TextView
                         android:id="@+id/vendido"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/imagen"
-                        android:layout_centerHorizontal="true"
+                        android:textColor="@color/black"
                         android:text="El mas vendido" />
 
                     <RatingBar
@@ -85,11 +88,9 @@
                         android:secondaryProgressTint="@color/paleta_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/vendido"
-                        android:layout_centerHorizontal="true"
                         android:rating="5"/>
 
-                </RelativeLayout>
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
@@ -99,7 +100,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardview" />
