--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/paleta_5"
+    android:layout_marginVertical="5dp"
+    android:layout_marginRight="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <FrameLayout
@@ -31,6 +32,7 @@
         android:layout_marginLeft="10dp"
         android:paddingRight="20dp"
         android:orientation="vertical"
+        android:visibility="gone"
         >
        <TextView
            android:id="@+id/nombre"
