--- a/app/src/main/res/layout/item_producto_imagen.xml
+++ b/app/src/main/res/layout/item_producto_imagen.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:gravity="center"
     android:foreground="@drawable/border_producto">
 
     <ImageView
         android:id="@+id/imagen"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_centerInParent="true"
 
         />
 
