--- a/app/src/main/res/layout/item_producto_recycler.xml
+++ b/app/src/main/res/layout/item_producto_recycler.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="5dp"
+
     android:background="@color/paleta_5">
     <TextView
         android:id="@+id/categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Categoria"/>
+        android:text="Categoria"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:layout_marginLeft="5dp"/>
     <androidx.recyclerview.widget.RecyclerView
+
+        android:background="#74E9ECEF"
         android:id="@+id/recycler_hijo"
         android:layout_width="match_parent"
+        tools:listitem="@layout/item_producto"
+        android:paddingHorizontal="5dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_below="@+id/categoria"/>
 
