dando id de promo

--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -86,6 +86,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="@color/color_primary"
+            android:textStyle="bold"
             android:layout_alignParentRight="true"
             android:text="monto final" />
 
