--- a/app/src/main/res/layout/bottom_sheet_confirmar_pago.xml
+++ b/app/src/main/res/layout/bottom_sheet_confirmar_pago.xml
@@ -11,15 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="30dp"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/atras"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/icon_back"
+                />
         <TextView
+            android:gravity="center_horizontal"
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Finalizar compra"
             android:textAllCaps="true"
             android:textSize="18dp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
+            android:textStyle="bold"/>
+            <ImageButton
+                android:id="@+id/cerrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/icon_disminuir" />
+        </LinearLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
