--- a/app/src/main/res/layout/bottom_sheet_filtro.xml
+++ b/app/src/main/res/layout/bottom_sheet_filtro.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/border_redondeado"
         >
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/date1"
 
-        />
+        />-->
     <TextView
       android:id="@+id/valorado"
         android:layout_width="wrap_content"
@@ -51,7 +51,6 @@
         android:textSize="20sp"
         android:text="Mas Valordado:"
         android:layout_marginTop="15dp"
-        android:layout_below="@+id/date"
         />
     <RadioGroup
         android:id="@+id/radiogroup1"
@@ -59,23 +58,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/date1"/>
-    <TextView
-        android:id="@id/vendido"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Mas Vendido:"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/valorado"
-        />
-    <RadioGroup
-        android:id="@+id/radiogroup2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/valorado"/>
+       />
+
     <Button
         android:id="@+id/boton2"
         android:layout_width="wrap_content"
@@ -85,7 +69,7 @@
         android:backgroundTint="@color/color_primary"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/vendido"/>
+        android:layout_below="@+id/valorado"/>
     </RelativeLayout>
 
 </RelativeLayout>
